Thu Nov 13 21:02:31 2003  Carlos O'Ryan  <coryan@atdesk.com>

	* tao/Queued_Message.cpp:
	  Made the remove_from_list() operation safe if called multiple
	  times.  This fixes:
	    http://deuce.doc.wustl.edu/bugzilla/show_bug.cgi?id=1614

Fri Nov 14 00:26:46 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * tests/RTScheduling/Scheduling_Interceptor/Makefile:
          Removed BIN_UNCHECKED from the SRC variable. Updated
          dependencies.

Thu Nov 13 15:42:44 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter/Makefile:
          Updated dependencies.

Thu Nov 13 04:26:17 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * orbsvcs/PSS/Makefile.datastore:
          Added MAKEFILE variable and updated dependencies.

Wed Nov 12  5:01:00 2003  George Edwards <g.edwards@vanderbilt.edu>

        * tests/Portable_Interceptors/Bug_1559/interceptors.cpp:

          Added check for "is_a" calls in client interceptors.

Wed Nov 12 16:55:00 2003  Justin Michel  <michel_j@ociweb.com>

        * docs/tutorials/Quoter/AMI/Quoter_AMI.mpc:
        * docs/tutorials/Quoter/Event_Service/Quoter_Event_Service.mpc:
        * docs/tutorials/Quoter/Naming_Service/Quoter_Naming_Service.mpc:
        * docs/tutorials/Quoter/On_Demand_Activation/Quoter_On_Demand_Activation.mpc:
        * docs/tutorials/Quoter/RT_Event_Service/Quoter_RT_Event_Service.mpc:
        * docs/tutorials/Quoter/Simple/Client/Quoter_Simple_Client.mpc:
        * docs/tutorials/Quoter/Simple/Impl-Repo/Quoter_Simple_Impl_Repo.mpc:
        * docs/tutorials/Quoter/Simple/ImprovedServer/Quoter_Simple_ImprovedServer.mpc:
        * docs/tutorials/Quoter/Simple/Persistent/Quoter_Simple_Persistent.mpc:
        * docs/tutorials/Quoter/Simple/Server/Quoter_Simple_Server.mpc:
        * docs/tutorials/Quoter/idl/Quoter_idl.mpc:
        * examples/AMH/Sink_Server/Sink_Server.mpc:
        * examples/AMI/FL_Callback/FL_Callback.mpc: